- - Added Ion Beam to Republic tech tree
- - Increased energy consumption per shot of all anti-missile devices by 10x
- Ship changes
- - Buffed the Heavy Shuttle with more red and yellow slots
- - Remade the Blackbird to have 2 turret weapon slots
- - Remade the Bulk Freighter to give it bigger turret slots but smaller gun slots
- - Nerfed Sea Scorpion 2vet build
- - Removed a couple of shield generators and cooling modules from the KIV 349 and Model 512
- - Made the model scales of the Haulers slightly bigger
- - Added a few blue slots to a few Republic ships
- - Fixed weird engine trail placement on FW ships
- - Modified the cell layouts of the FW hauler-carriers
- - Replaced Barrage Turrets on Leviathan and Falcon with Heavy Laser Beam Turrets
- - Gave Marauder Arrow 2vet Heavy Laser and 1vet Twin Modified Blaster
- - Gave the Merchant Scout better engine slot placement
- - Modified the Hovertank to give it omni slots
- Tech changes
- - Shuffled around fuel cell and battery technologies in Merchant tech tree
- - Shuffled around some technologies in Republic tech tree
- - Reduced tech cost of heavy laser beams and quad blaster turret
- Global changes
- - Increased default shield cooldown value from 0 to 0.5 (to match energy cooldown value)
- - Fixed issue with missiles exploding when hit by any hitbox and not exploding when it should

0.14.3 ??? update
- Component changes
- - Increased spread of gatling guns
- Ship changes
- - Tweaked the Modified Argosy and Manta cell layout
- - Fixed an issue where one of the vanilla drones had no energy storage capacity
- - Improved slot layout of Class C Freighter
- - Modified the Splinter's red slots to give 3 turret and 2 gun slots
- Tech changes
- - Shuffled around weapon technologies in Syndicate tech tree
- - Added missing tech for torpedo, typhoon, rocket pods
- - Added tech for HMLM3 and HMLM4 in Bushrak tech tree
- Global changes