@@ -7,7 +7,7 @@
   "IconImage": "firebird icon.png",
   "IconScale": 1.0,
   "ModelImage": "firebird.png",
-  "ModelScale": 3.0,
+  "ModelScale": 2.5,
   "EnginePosition": {
     "x": -0.8
   },
@@ -65,14 +65,16 @@
         "x": 0.2,
         "y": 0.5
       },
-      "PlatformType": 3
+      "PlatformType": 3,
+      "WeaponClass": "CLTM"
     },
     {
       "Position": {
         "x": 0.2,
         "y": -0.5
       },
-      "PlatformType": 3
+      "PlatformType": 3,
+      "WeaponClass": "CLTM"
     }
   ]
 }
