@@ -12,13 +12,6 @@
       "BarrelId": -1
     },
     {
-      "ComponentId": 1013,
-      "Locked": true,
-      "X": 5,
-      "Y": 13,
-      "BarrelId": -1
-    },
-    {
       "ComponentId": 1012,
       "Locked": true,
       "X": 10,
@@ -28,21 +21,7 @@
     {
       "ComponentId": 1012,
       "Locked": true,
-      "X": 4,
-      "Y": 13,
-      "BarrelId": -1
-    },
-    {
-      "ComponentId": 1012,
-      "Locked": true,
       "X": 10,
-      "Y": 14,
-      "BarrelId": -1
-    },
-    {
-      "ComponentId": 1012,
-      "Locked": true,
-      "X": 4,
       "Y": 14,
       "BarrelId": -1
     },
@@ -84,19 +63,6 @@
       "KeyBinding": 1
     },
     {
-      "ComponentId": 2022,
-      "Locked": true,
-      "X": 8,
-      "Y": 4,
-      "BarrelId": 1
-    },
-    {
-      "ComponentId": 2022,
-      "Locked": true,
-      "X": 5,
-      "Y": 4
-    },
-    {
       "ComponentId": 1031,
       "Locked": true,
       "X": 5,
@@ -108,6 +74,51 @@
       "Locked": true,
       "X": 8,
       "Y": 8,
+      "BarrelId": -1,
+      "KeyBinding": 1
+    },
+    {
+      "ComponentId": 2034,
+      "Locked": true,
+      "X": 8,
+      "Y": 4,
+      "BarrelId": 1
+    },
+    {
+      "ComponentId": 2034,
+      "Locked": true,
+      "X": 5,
+      "Y": 4
+    },
+    {
+      "ComponentId": 71,
+      "Locked": true,
+      "X": 8,
+      "Y": 6,
+      "BarrelId": -1,
+      "KeyBinding": 1
+    },
+    {
+      "ComponentId": 1011,
+      "Locked": true,
+      "X": 4,
+      "Y": 13,
+      "BarrelId": -1,
+      "KeyBinding": 1
+    },
+    {
+      "ComponentId": 1011,
+      "Locked": true,
+      "X": 4,
+      "Y": 14,
+      "BarrelId": -1,
+      "KeyBinding": 1
+    },
+    {
+      "ComponentId": 1014,
+      "Locked": true,
+      "X": 5,
+      "Y": 13,
       "BarrelId": -1,
       "KeyBinding": 1
     }
