@@ -166,39 +166,40 @@
       "KeyBinding": 1
     },
     {
-      "ComponentId": 1025,
-      "Locked": true,
-      "X": 15,
-      "Y": 14,
-      "BarrelId": 4
-    },
-    {
-      "ComponentId": 1025,
-      "Locked": true,
-      "X": 5,
-      "Y": 14,
-      "BarrelId": 3
-    },
-    {
-      "ComponentId": 1025,
-      "Locked": true,
-      "X": 10,
-      "Y": 11,
-      "BarrelId": 2
-    },
-    {
-      "ComponentId": 2025,
+      "ComponentId": 2034,
       "Locked": true,
       "X": 12,
       "Y": 2,
-      "BarrelId": 1,
+      "BarrelId": 1
+    },
+    {
+      "ComponentId": 2034,
+      "Locked": true,
+      "X": 9,
+      "Y": 2
+    },
+    {
+      "ComponentId": 1034,
+      "Locked": true,
+      "X": 10,
+      "Y": 11,
+      "BarrelId": 2,
       "KeyBinding": 1
     },
     {
-      "ComponentId": 2025,
+      "ComponentId": 1034,
       "Locked": true,
-      "X": 9,
-      "Y": 2,
+      "X": 15,
+      "Y": 14,
+      "BarrelId": 4,
+      "KeyBinding": 1
+    },
+    {
+      "ComponentId": 1034,
+      "Locked": true,
+      "X": 5,
+      "Y": 14,
+      "BarrelId": 3,
       "KeyBinding": 1
     }
   ]
