@@ -3,7 +3,7 @@
   "Id": 1034,
   "WeaponClass": 4,
   "FireRate": 3.75,
-  "Spread": 4.0,
+  "Spread": 3.0,
   "Magazine": 6,
   "ActivationType": 1,
   "ShotSound": "proton",
